# drawbot

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  ImageProvider.cpp  ImageProvider.h  QImageController.cpp  QImageController.h  QImageItem.cpp  QImageItem.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
drawbot/: CMakeLists.txt  drawbot.cpp  drawbot.h  protocol.h  serial.h  stepper.h
drawbot/firmware/: A4988.cpp  A4988.h  ArduinoSerial.cpp  ArduinoSerial.h  CMakeLists.txt  config.h  gcode.cpp  gcode.h  main.cpp
drawbot/sim/: CMakeLists.txt  protocol_stub.cpp  protocol_stub.h  serial_stub.cpp  serial_stub.h  stepper_stub.cpp  stepper_stub.h
server/: server.py
server/test/: test.py
